# dribbling_cyberdog2

./: .gitignore  .gitmodules  README.md
dribblebot-deploy/: ball_detector.py  config.py  dribble_env.py  location_server.py  loco_env.py  robot_data_server.py  soccer_env.py  utils.py
dribblebot-deploy/ckpt/: test.ipynb
dribblebot-deploy/ckpt/122/: adaptation_module_latest.jit  body_latest.jit
dribblebot-deploy/ckpt/123/: adaptation_module_latest.jit  body_latest.jit
dribblebot-deploy/ckpt/124/: adaptation_module_latest.jit  body_latest.jit
dribblebot-deploy/ckpt/125/: adaptation_module_latest.jit  body_latest.jit
dribblebot-deploy/ckpt/202405030_1/: adaptation_module_latest.jit
dribblebot-deploy/ckpt/202405030_2/: adaptation_module_latest.jit
dribblebot-deploy/ckpt/helpful-river-57/: adaptation_module_latest.jit  body_latest.jit
dribblebot-deploy/lcm_datatypes/: leg_control_data.lcm  motor_ctrl_state.lcm  robot_data.lcm  spi_data.lcm  state_estimator.lcm
dribblebot-deploy/robot_data_types/: __init__.py  leg_control_data_lcmt.py  motor_ctrl_state_lcmt.py  robot_data_lcmt.py  spi_data_t.py  state_estimator_lcmt.py
examples/: example_read.py  example_stand.py
robot_interface/: CMakeLists.txt  robot_interface.cpp  robot_interface.pyi  setup.py
